@@ -202,7 +202,7 @@ namespace TreeControl.Patches
             __result = ToolErrors.None;
 
             // If anarchy isn't enabled, go on to execute original method (will override default original result assigned above).
-            return !TreeManagerPatches.AnarchyEnabled;
+            return TreeManagerPatches.CurrentAnarchyMode != AnarchyMode.Enabled;
         }
 
         /// <summary>
