@@ -1,13 +1,15 @@
 "LANGUAGE","English","Language name (in native language)."
 "MOD_DESCRIPTION","Tree anarchy and other functions","Mod description, visibile in content manager."
 "ANARCHY_STATUS","Tree anarchy:","Status indicator text."
-"ANARCHY_TIP","If this is enabled, trees won't be automatically hidden by networks or buildings in the same place.","Status indicator tooltip text."
+"ANARCHY_TIP","If anarchy is enabled, trees won't be automatically hidden by networks or buildings in the same place.","Status indicator tooltip text."
+"ANARCHY_REMOVE_TIP","If remove anarchy is enabled, existing trees will have their anarchy status removed if covered by a network or building (and will be hidden).","Status indicator tooltip text."
 "SNAPPING_STATUS","Tree snapping:","Status indicator text."
 "SNAPPING_TIP","If this is enabled, new trees will snap to buildings when added.","Status indicator tooltip text."
 "FORESTRY_STATUS","Lock forestry:","Status indicator text."
 "FORESTRY_TIP","If this is enabled, adding or removing trees won't affect the map's forestry resource coverage.","Status indicator tooltip text."
 "ON","On","Status indicator text."
 "OFF","Off","Status indicator text."
+"FORCE_OFF","Remove anarchy","Status indicator text."
 "OPTIONS_GENERAL","General","Options tab title."
 "OPTIONS_TREES","Trees","Options tab title."
 "KEYS","Keys","Options tab title."
@@ -41,6 +43,7 @@
 "IGNORE_TA_DATA","Ignore Tree Anarchy mod data","Checkbox in options panel."
 "IGNORE_TA_DATA_TIP","If this is selected, any data left in the savefile by the Tree Anarchy mod will be ignored. Enable this if you're having issues loading games saved with the Tree Anarchy mod.","Checkbox tooltip in options panel."
 "KEY_ANARCHY","Toggle tree anarchy","Options panel key setting text."
+"KEY_REMOVE_ANARCHY","Toggle anarchy removal","Options panel key setting text."
 "KEY_SNAPPING","Toggle tree snapping","Options panel key setting text."
 "KEY_FORESTRY","Toggle lock forestry","Options panel key setting text."
 "KEY_ELEVATION_UP","Raise tree","Options panel key setting text."
